--- a/POS_SYSTEM/package.json
+++ b/POS_SYSTEM/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/TanishqChhibber/POS_SYSTEM/issues"
   },
-  "homepage": "https://github.com/TanishqChhibber/POS_SYSTEM#readme"
+  "homepage": "https://github.com/TanishqChhibber/POS_SYSTEM#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mysql": "^2.18.1",
+    "pdfkit": "^0.16.0"
+  }
 }
